# rekody

./: CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  install.sh  package.json
.github/workflows/: ci.yml  release.yml
crates/chamgei-audio/src/: lib.rs
crates/chamgei-core/: Cargo.toml
crates/chamgei-core/src/: history.rs  lib.rs  main.rs  onboarding.rs
crates/chamgei-hotkey/: Cargo.toml  build.rs
crates/chamgei-hotkey/src/: lib.rs
crates/chamgei-hotkey/tests/: accessibility.rs
crates/chamgei-stt/: Cargo.toml
crates/chamgei-stt/src/: lib.rs
crates/rekody-audio/src/: lib.rs
crates/rekody-core/: Cargo.toml
crates/rekody-core/src/: history_tui.rs  lib.rs  main.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
website/: .gitignore  astro.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  vercel.json
website/public/: robots.txt
website/src/components/: Demo.astro  Faq.astro  Features.astro  Footer.astro  Hero.astro  InstallSection.astro  Navbar.astro  PrivacyBlock.astro  SocialProof.astro  SttTable.astro
website/src/layouts/: Base.astro
website/src/lib/: version.ts
website/src/pages/: index.astro
website/src/styles/: global.css
website/tests/: seo.spec.ts
