[workspace]
resolver = "2"
members = [
    "crates/rekody-core",
    "crates/rekody-audio",
    "crates/rekody-stt",
    "crates/rekody-llm",
    "crates/rekody-inject",
    "crates/rekody-hotkey",
]

[workspace.package]
version = "0.5.4"
edition = "2024"
license = "MIT"
authors = ["Tony Kipkemboi"]
repository = "https://github.com/rekody/rekody"

[workspace.dependencies]
rekody-core = { path = "crates/rekody-core" }
rekody-audio = { path = "crates/rekody-audio" }
rekody-stt = { path = "crates/rekody-stt" }
rekody-llm = { path = "crates/rekody-llm" }
rekody-inject = { path = "crates/rekody-inject" }
rekody-hotkey = { path = "crates/rekody-hotkey" }

# Shared dependencies
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive"] }
