[package]
name = "chamgei-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
chamgei-core.workspace = true
toml.workspace = true
chamgei-llm.workspace = true
dirs = "6"
arboard = "3"
cpal = "0.15"
tokio.workspace = true
tracing.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

[lib]
name = "chamgei_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chamgei-tauri"
path = "src/main.rs"
